<resources>
    <string name="app_name">VerbumQuest</string>
    <string name="title_activity_verbum_quest">VerbumQuest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Activity Main-->
    <string name="BTLogin">login</string>
    <string name="BTRegistre">registre</string>

    <!--Activity Registre-->
    <string name="etCorreu">Correu electrònic</string>
    <string name="etContrassenya">Contrassenya</string>
    <string name="etNomUsuari">Nom</string>
    <string name="btRegistre">Registrar-se</string>

    <!--Activity Login-->
    <string name="etCorreuLogin">Correu electrònic</string>
    <string name="etContrassenyaLogin">Contrassenya</string>
    <string name="btLogin">Entrar</string>

    <!--Menu-->
    <string name="jugarBtn">Jugar</string>
    <string name="torre">Mode torre</string>
    <string name="quisom">About Us</string>
    <string name="usuari">Perfil</string>
    <string name="TancarSessio">Tancar sessió</string>

    <!--Perfil Jugador-->
    <string name="titol">Perfil</string>
    <string name="nom">Nom: </string>
    <string name="puntuaciototal">Puntuació total: </string>
    <string name="correu">Correu: </string>

    <!--torre-->
    <string name="lvl1">lvl1</string>
    <string name="puntuacio">--</string>
    <string name="uid">--</string>

    <!--mon-->
    <string name="mon1">Camp</string>
    <string name="mon2">Bosc</string>
    <string name="mon3">Desert</string>

    <!--joc -->
    <string name="pregunta">pregunta</string>

</resources>