<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom" />

        <TextView
            android:id="@+id/correu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correu" />

        <TextView
            android:id="@+id/puntuaciototal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puntuaciototal" />



    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>