<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Registre">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <!--Nom d'usuari-->
        <EditText
            android:id="@+id/etNomUsuari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNomUsuari"
            android:importantForAutofill="no"
            android:inputType="text" />

        <!--Correu electrònic d'usuari-->
        <EditText
            android:id="@+id/etCorreu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etCorreu"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <!--Contrassenya d'usuari-->
        <EditText
            android:id="@+id/etContrassenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etContrassenya"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btRegistre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="#00CA54"
            android:text="@string/btRegistre" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>