<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/text"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:src="@drawable/text" />

        <Button
            android:id="@+id/jugarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boto_personalitzat"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/jugarBtn" />

        <Button
            android:id="@+id/torre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boto_personalitzat"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/torre" />

        <Button
            android:id="@+id/quisom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boto_personalitzat"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/quisom" />

        <Button
            android:id="@+id/TancarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boto_personalitzat"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/TancarSessio" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>