<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <!--CORREU ELECTRÒNIC D'USUARI-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etCorreuLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etCorreuLogin"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASSENYA D'USUARI-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etContrassenyaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etContrassenyaLogin"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="#00CA54"
            android:text="@string/btLogin" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>